--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1"
   },
