--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@beakjs/react": "^0.0.6",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "requirejs": "^2.3.6"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
