--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitest/ui": "^1.0.4",
     "c8": "^8.0.1",
     "jsdom": "^23.0.1",
+    "react-error-overlay": "^6.0.9",
     "vite": "^5.1.1",
     "vitest": "^1.0.4"
   }
