--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.10",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "firebase": "^10.8.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
