--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "cy:open": "cypress open",
+    "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
+    "em:exec": "firebase emulators:exec --import=./saved-data 'npm start'",
+    "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm start'"
   },
   "dependencies": {
     "@beakjs/react": "^0.0.6",
@@ -29,6 +33,7 @@
     "@vitest/coverage-v8": "^1.3.1",
     "@vitest/ui": "^1.0.4",
     "c8": "^8.0.1",
+    "cypress": "^13.6.6",
     "jsdom": "^23.0.1",
     "vite": "^5.1.1",
     "vitest": "^1.0.4"
