--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   },
   "dependencies": {
     "@beakjs/react": "^0.0.6",
-    "@emotion/react": "^11.11.3",
+    "@date-io/dayjs": "^3.0.0",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.167",
+    "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.6",
+    "antd": "^5.15.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
