--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-calendar": "^4.8.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.3.1",
     "@vitest/ui": "^1.0.4",
