--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/x-date-pickers": "^6.19.6",
+    "@testing-library/user-event": "^14.5.2",
     "antd": "^5.15.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.3.1",
@@ -39,6 +40,7 @@
     "@vitest/coverage-v8": "^1.3.1",
     "@vitest/ui": "^1.0.4",
     "c8": "^8.0.1",
+    "jest": "^29.7.0",
     "jsdom": "^23.0.1",
     "vite": "^5.1.1",
     "vitest": "^1.0.4"
